fixed slight border issue (right)  on mobile devices on contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,7 @@ body {
     padding: 10px;
     padding-top: 20px;
     padding-bottom: 20px; 
+    padding-right:15px;
     min-height: 80vh;    
 }
     
@@ -175,7 +176,7 @@ body {
 	background: #a88a99;
 	padding: 3%;
 	border-top-right-radius: 0.5rem;
-     border-bottom-right-radius: 0.5rem;        
+    border-bottom-right-radius: 0.5rem;        
 }
 
 .contact-form label {
